unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__AllowAccountNumberTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AllowAccountNumberTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Account Number for Tracking</label>
    <type>Checkbox</type>
</CustomField>