unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__AllowEditOfUsedCommercialInvoices__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AllowEditOfUsedCommercialInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, user will be allowed to edit FedEx Commercial Invoice records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to FedEx with the existing shipments.</description>
    <inlineHelpText>If Checked, user will be allowed to edit FedEx Commercial Invoice records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to FedEx with the existing shipments.</inlineHelpText>
    <label>Allow Edit of Used Commercial Invoices</label>
    <type>Checkbox</type>
</CustomField>