unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__AllowEditOfUsedNaftaCo__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AllowEditOfUsedNaftaCo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, user will be allowed to edit FedEx NAFTA Certificate of Origin records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to FedEx with the existing shipments.</description>
    <inlineHelpText>If Checked, user will be allowed to edit FedEx NAFTA Certificate of Origin records that have already been used in a Shipment. Any changes made will no longer reflect the data submitted to FedEx with the existing shipments.</inlineHelpText>
    <label>Allow Edit of Used NAFTA CO</label>
    <type>Checkbox</type>
</CustomField>