unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__DefaultUnitsToKgCm__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DefaultUnitsToKgCm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The shipping wizard defaults the units to LB/IN. If this checkbox is checked, the shipping wizard will default to KG/CM, even for domestic shipments. This is applicable to the entire org for all created shipmate preferences.</description>
    <inlineHelpText>The shipping wizard defaults the units to LB/IN. If this checkbox is checked, the shipping wizard will default to KG/CM, even for domestic shipments. This is applicable to the entire org for all created shipmate preferences.</inlineHelpText>
    <label>Default Units to KG/CM</label>
    <type>Checkbox</type>
</CustomField>