unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__DisableRateShipForInvalidAddress__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DisableRateShipForInvalidAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Rate/Shipment Generation for Invalid Address</description>
    <inlineHelpText>Disable Rate/Shipment Generation for Invalid Address</inlineHelpText>
    <label>Disable Rate/Ship for Invalid Address</label>
    <type>Checkbox</type>
</CustomField>