unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__IgnoreMaxJobLimitForScheduledTrack__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IgnoreMaxJobLimitForScheduledTrack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignore the Salesforce max number of scheduled jobs when attempting to schedule shipment tracking using "Schedule Tracking". Note, the scheduling of the "Schedule Tracking" feature may fail if your org/edition is not setup to allow jobs past the max limit.</description>
    <inlineHelpText>Ignore the Salesforce max number of scheduled jobs when attempting to schedule shipment tracking using "Schedule Tracking". Note, the scheduling of the "Schedule Tracking" feature may fail if your org/edition is not setup to allow jobs past the max limit.</inlineHelpText>
    <label>Ignore Max Job Limit for Scheduled Track</label>
    <type>Checkbox</type>
</CustomField>