unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__NumberOfCommercialDocumentPrints__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NumberOfCommercialDocumentPrints__c</fullName>
    <label>Number of Commercial Document Prints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>