unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__OnlyAllowValidatedShipments__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OnlyAllowValidatedShipments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Allow Validated Shipments</label>
    <type>Checkbox</type>
</CustomField>