unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__RecordPrintHistories__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecordPrintHistories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Print Histories</label>
    <type>Checkbox</type>
</CustomField>