unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__RecordShippingCheckpoints__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecordShippingCheckpoints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Shipping Checkpoints</label>
    <type>Checkbox</type>
</CustomField>