unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__RunDemoMode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RunDemoMode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Configures ZenKraft Shipmate to communicate to the FedEx test servers. A valid FedEx Account number that is compatible with the FedEx test servers must be used.</description>
    <inlineHelpText>Configures ZenKraft Shipmate to communicate to the FedEx test servers. A valid FedEx Account number that is compatible with the FedEx test servers must be used.</inlineHelpText>
    <label>Run Demo Mode</label>
    <type>Checkbox</type>
</CustomField>