unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__TruncateRecipientCompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TruncateRecipientCompanyName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Truncate Recipient Name and Company Name if longer than 35 characters</description>
    <inlineHelpText>Truncate Recipient Name and Company Name if longer than 35 characters</inlineHelpText>
    <label>Truncate Recipient Name and Company Name</label>
    <type>Checkbox</type>
</CustomField>