unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__UpdateShipmentFieldsFromTracking__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UpdateShipmentFieldsFromTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Shipment Fields From Tracking</label>
    <type>Checkbox</type>
</CustomField>