unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__UseFiles__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UseFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Save labels to Salesforce File</description>
    <inlineHelpText>Save labels to Salesforce File</inlineHelpText>
    <label>Use Files</label>
    <type>Checkbox</type>
</CustomField>