unpackaged/main/default/objects/zkfedex__ShipmateGeneralSettings__c/fields/zkfedex__UseListRates__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UseListRates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will use List rates for shipment pricing as opposed to the rates of your FedEx account.</description>
    <inlineHelpText>Will use List rates for shipment pricing as opposed to the rates of your FedEx account.</inlineHelpText>
    <label>Use List Rates</label>
    <type>Checkbox</type>
</CustomField>